force-app/main/default/objects/AH_Salesforce_Instance_to_Notification__c/AH_Salesforce_Instance_to_Notification__c.object-meta.xml
<CustomObject>
    <description>NICC-031037 - Junction object used to link Salesforce Instances to Salesforce Trust Notifications.</description>
    <label>AH Salesforce Instance to Notification</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AH Salesforce Instance to Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>