force-app/main/default/objects/AH_Salesforce_Instance_to_Notification__c/fields/AH_Salesforce_Instance__c.field-meta.xml
<CustomField>
    <fullName>AH_Salesforce_Instance__c</fullName>
    <description>NICC-031037</description>
    <label>AH Salesforce Instance</label>
    <referenceTo>AH_Salesforce_Instance__c</referenceTo>
    <relationshipLabel>AH Salesforce Notifications</relationshipLabel>
    <relationshipName>AH_Salesforce_Instance_to_Notification</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>