force-app/main/default/objects/AH_Salesforce_Instance_to_Notification__c/fields/AH_Salesforce_Notification__c.field-meta.xml
<CustomField>
    <fullName>AH_Salesforce_Notification__c</fullName>
    <description>NICC-031037</description>
    <label>AH Salesforce Notification</label>
    <referenceTo>AH_Salesforce_Trust_Notification__c</referenceTo>
    <relationshipLabel>AH Salesforce Instances</relationshipLabel>
    <relationshipName>AH_Salesforce_Instance_to_Notification</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>